--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ input[type=text], input[type=password], input[type=date] {
   background: #f1f1f1;
 }
 
+.equalDivide tr td { width:20%; }
+
 input[type=text]:focus, input[type=password]:focus, input[type=date]:focus {
   background-color: #ddd;
   outline: none;
